Fixing left alignment

--- a/wp-content/themes/quill/assets/css/app.css
+++ b/wp-content/themes/quill/assets/css/app.css
@@ -56,7 +56,7 @@
   width: 225px;
   display: inline-block;
   float: left;
-  margin-left: -40px;
+  margin-left: -110px;
   margin-right: 25px; }
   #buddypress div#buddypress-sidebar #item-header-content {
     width: 100%; }
