--- a/wp-content/themes/quill/assets/sass/_buddypress.scss
+++ b/wp-content/themes/quill/assets/sass/_buddypress.scss
@@ -12,7 +12,7 @@
 		width: 225px;
 		display: inline-block;
 		float: left;
-		margin-left: -40px;
+		margin-left: -110px;
 		margin-right: 25px;
 		#item-header-content {
 			width: 100%;
